--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-lg-6 mt-5 mt-lg-0">
                     <div class="hero-img">
-                        <img src="img/mr.perfect__882_1725415684702913.jpg" alt="Sudarshan Rayudu">
+                        <img src="Picsart_25-03-15_17-15-14-824~2.jpg" alt="Sudarshan Rayudu">
                     </div>
                 </div>
             </div>
