--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="row align-items-center animate-on-scroll">
                 <div class="col-lg-6 mb-5 mb-lg-0">
                     <div class="about-img">
-                        <img src="img/Picsart_25-03-15_17-15-14-824~2.jpg" alt="About Sudarshan" class="img-fluid">
+                        <img src="mr.perfect__882_1725415684702913.jpg" alt="About Sudarshan" class="img-fluid">
                     </div>
                 </div>
                 <div class="col-lg-6">
