--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h1>Web Developer | DevOps Enthusiast</h1>
                     <p class="lead mb-4">Passionate about creating innovative web solutions and exploring DevOps methodologies to optimize development workflows and deployment pipelines.</p>
                     <div class="social-icons">
-                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="www.linkedin.com/in/sudarshan-rayudu-819121343" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
                         <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
                         <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
